pruebaFinal/force-app/main/default/objects/Lead/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Vincula el prospecto con un cliente existente para venta cruzada.</description>
    <inlineHelpText>Vincula el prospecto con un cliente existente para venta cruzada.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>