pruebaFinal/force-app/main/default/objects/Lead/fields/Dias_Definidos_para_cierre__c.field-meta.xml
<CustomField>
    <fullName>Dias_Definidos_para_cierre__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Dias establecidos por el analista para que el lead se cierre automáticamente</description>
    <inlineHelpText>Colocar número de días para que el lead sea atendido o se cerrará automáticamente.</inlineHelpText>
    <label>Días Definidos para cierre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>