pruebaFinal/force-app/main/default/objects/Lead/fields/Disponibilidad_de_retiro__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad_de_retiro__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el prospecto desea habilitar el retiro de efectivo en cajeros.</description>
    <inlineHelpText>Indica si el prospecto desea habilitar el retiro de efectivo en cajeros.</inlineHelpText>
    <label>Disponibilidad de retiro</label>
    <type>Checkbox</type>
</CustomField>