pruebaFinal/force-app/main/default/objects/Lead/fields/Fecha_de_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_nacimiento__c</fullName>
    <description>Fecha de nacimiento del cliente.</description>
    <inlineHelpText>Ingrese fecha de nacimiento del cliente</inlineHelpText>
    <label>Fecha de nacimiento</label>
    <required>true</required>
    <type>Date</type>
</CustomField>