pruebaFinal/force-app/main/default/objects/Lead/fields/Fecha_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_pago__c</fullName>
    <description>Día preferido de facturación capturado desde el primer contacto.</description>
    <inlineHelpText>Día preferido de facturación capturado desde el primer contacto.</inlineHelpText>
    <label>Fecha de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>