pruebaFinal/force-app/main/default/objects/Lead/fields/Ingreso_Mensual__c.field-meta.xml
<CustomField>
    <fullName>Ingreso_Mensual__c</fullName>
    <description>Detalle del ingreso mensual del cliente</description>
    <inlineHelpText>Ingresos mensual del cliente</inlineHelpText>
    <label>Ingreso Mensual</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>