pruebaFinal/force-app/main/default/objects/Lead/fields/Linea_de_Credito_Solicitada__c.field-meta.xml
<CustomField>
    <fullName>Linea_de_Credito_Solicitada__c</fullName>
    <description>Solicitud de línea de crédito</description>
    <inlineHelpText>Monto que deseas en tu tarjeta</inlineHelpText>
    <label>Línea de Crédito Solicitada</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>