pruebaFinal/force-app/main/default/objects/Lead/fields/Segmento_de_Tarjeta__c.field-meta.xml
<CustomField>
    <fullName>Segmento_de_Tarjeta__c</fullName>
    <description>Nivel de la tarjeta (Visa Plata, Oro,Infinite)</description>
    <inlineHelpText>Visa Plata, Oro,Infinite, etc</inlineHelpText>
    <label>Segmento de Tarjeta</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Tarjeta__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>segmentoDeTarjeta</valueSetName>
    </valueSet>
</CustomField>