pruebaFinal/force-app/main/default/objects/Lead/fields/Situacion_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Situacion_Laboral__c</fullName>
    <description>Estado de trabajo del account</description>
    <inlineHelpText>Tipo de trabajo</inlineHelpText>
    <label>Situacion Laboral</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>situacionLaboralAccount</valueSetName>
    </valueSet>
</CustomField>