pruebaFinal/force-app/main/default/objects/Lead/validationRules/Bloquear_Edicion_Campos_Lead_Cerrado.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Edicion_Campos_Lead_Cerrado</fullName>
    <active>true</active>
    <description>Bloquea la edición de campos que ya fueron convertidos y generaría un cambio no estandarizado en la operación.</description>
    <errorConditionFormula>AND(
    /* Condición 1: El Lead está en estado cerrado */
    OR(
        ISPICKVAL(Status, &quot;Closed - Converted&quot;),
        ISPICKVAL(Status, &quot;Closed - Not Converted&quot;)
    ),
    
    /* Condición 2: El usuario intenta cambiar alguno de estos campos */
    OR(
        ISCHANGED(Account__c),
        ISCHANGED(Tipo_de_Tarjeta__c),
        ISCHANGED(Segmento_de_Tarjeta__c),
        ISCHANGED(Ingreso_Mensual__c),
        ISCHANGED(Linea_de_Credito_Solicitada__c),
        ISCHANGED(Situacion_Laboral__c),
        ISCHANGED(Fecha_de_pago__c),
        ISCHANGED(Dias_Definidos_para_cierre__c),
        ISCHANGED(Situacion_Laboral__c)
    )
)</errorConditionFormula>
    <errorMessage>Este Lead ya se encuentra cerrado. No puedes modificar campos aprobados.</errorMessage>
</ValidationRule>