pruebaFinal/force-app/main/default/objects/Lead/validationRules/Bloquear_Reapertura_de_Lead.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Reapertura_de_Lead</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Status),
    OR(
        ISPICKVAL(PRIORVALUE(Status), &quot;Closed - Converted&quot;),
        ISPICKVAL(PRIORVALUE(Status), &quot;Closed - Not Converted&quot;)
    ),
    ISPICKVAL(Status, &quot;Open - Not Contacted&quot;)
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>No puedes regresar un Lead a estado &quot;Open - Not Contacted&quot; si ya fue Cerrado o Convertido.</errorMessage>
</ValidationRule>