pruebaFinal/force-app/main/default/objects/Lead/validationRules/Bloquear_Valores_Negativos.validationRule-meta.xml
<ValidationRule>
    <fullName>Bloquear_Valores_Negativos</fullName>
    <active>true</active>
    <description>Evita que se coloquen valores inválidos, negativos o ceros, en campos numéricos</description>
    <errorConditionFormula>OR(
    Ingreso_Mensual__c &lt;= 0,
    Linea_de_Credito_Solicitada__c &lt;= 0,
    Dias_Definidos_para_cierre__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Error en los datos financieros: El Ingreso Mensual, la Línea de Crédito y cualquier otro valor monetario deben ser estrictamente mayores a 0.</errorMessage>
</ValidationRule>