pruebaFinal/force-app/main/default/objects/Lead/validationRules/Invalid_Birth_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Birth_Date</fullName>
    <active>true</active>
    <description>Se restringe fechas inferiores a 120 años atrás y fechas posteriores a hoy.</description>
    <errorConditionFormula>OR(
    /* Condición 1: La fecha es mayor a hoy (nació en el futuro) */
    Fecha_de_nacimiento__c &gt; TODAY(),
    
    /* Condición 2: La fecha es menor a hace 120 años (1440 meses) */
    Fecha_de_nacimiento__c &lt; ADDMONTHS(TODAY(), -1440)
)</errorConditionFormula>
    <errorDisplayField>Fecha_de_nacimiento__c</errorDisplayField>
    <errorMessage>Fecha de nacimiento inválida. El cliente no puede haber nacido en el futuro ni tener más de 120 años.</errorMessage>
</ValidationRule>