pruebaFinal/force-app/main/default/objects/Lead/validationRules/Prevent_Closed_Status_On_Creation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Closed_Status_On_Creation</fullName>
    <active>true</active>
    <description>Evita que se cree un lead con el Closed cerrado desde el inicio</description>
    <errorConditionFormula>AND(
    /* Condición 1: El registro se está creando por primera vez */
    ISNEW(),
    
    /* Condición 2: El usuario seleccionó un estado cerrado */
    OR(
        ISPICKVAL(Status, &quot;Closed - Converted&quot;),
        ISPICKVAL(Status, &quot;Closed - Not Converted&quot;)
    )
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>Un nuevo Lead no puede ser creado con estado &quot;Cerrado&quot;. Por favor, selecciona &quot;Open - Not Contacted&quot; al crearlo.</errorMessage>
</ValidationRule>