pruebaFinal/force-app/main/default/objects/Lead/validationRules/Req_Descripcion_Close_Converted_Apto_No.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_Descripcion_Close_Converted_Apto_No</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    /* 1. Detectamos que el estado elegido es el de conversión */
    ISPICKVAL(Status, &apos;Closed - Converted&apos;),
    
    /* 2. Verificamos que el registro NO se esté convirtiendo por el sistema */
    NOT(IsConverted)
)</errorConditionFormula>
    <errorMessage>Para convertir este Lead y crear la Oportunidad, no cambie el estado manualmente. Por favor, utilice el botón &quot;Convertir&quot; (Convert) ubicado en la parte superior derecha de la pantalla.</errorMessage>
</ValidationRule>