pruebaFinal/force-app/main/default/objects/Lead/validationRules/Requerir_Descripcion_Not_Converted.validationRule-meta.xml
<ValidationRule>
    <fullName>Requerir_Descripcion_Not_Converted</fullName>
    <active>true</active>
    <description>Esta regla evaluará si el estado del prospecto (Lead) es &quot;Not Converted&quot; y verificará si el campo Descripción está vacío. Si ambas cosas son ciertas, bloqueará el guardado.</description>
    <errorConditionFormula>AND(
    /* Verificamos si el estado es &apos;Not Converted&apos; */
    ISPICKVAL(Status, &apos;Closed - Not Converted&apos;),
    
    /* Verificamos si el campo Descripción está vacío */
    ISBLANK(Description)
)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Debe ingresar una descripción detallando el motivo por el cual el Lead no fue convertido.</errorMessage>
</ValidationRule>